tests/diagnostics/catalog/snapshots/ir/IR0015.snap
error[IR0015]: IR_E_EXPECTED_BLOCK
 --> tests/diagnostics/catalog/sources/ir/IR0015.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0015
  = help: keep IR validation diagnostics structured and catalog-backed
